--- a/package.json
+++ b/package.json
@@ -21,6 +21,15 @@
     "url": "https://github.com/LiqunHu/node-srv-utils/issues"
   },
   "homepage": "https://github.com/LiqunHu/node-srv-utils#readme",
+  "dependencies": {
+    "@alicloud/pop-core": "^1.7.10",
+    "crypto-js": "^4.1.1",
+    "dayjs": "^1.10.8",
+    "ioredis": "^4.28.5",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "node-schedule": "^2.1.0"
+  },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
@@ -30,13 +39,5 @@
     "rimraf": "^3.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
-  },
-  "dependencies": {
-    "@alicloud/pop-core": "^1.7.10",
-    "crypto-js": "^4.1.1",
-    "dayjs": "^1.10.8",
-    "ioredis": "^4.28.5",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21"
   }
 }
