--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "server utils",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "joi-swagger-generator": "./dis/bin/joi-swagger-generator.js"
+  },
   "scripts": {
     "build": "rimraf ./dist && tsc"
   },
@@ -25,17 +28,25 @@
     "@alicloud/pop-core": "^1.7.10",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.8",
+    "fs-extra": "^10.0.1",
+    "glob": "^7.2.0",
     "ioredis": "^4.28.5",
+    "joi": "^17.6.0",
+    "joi-phone-number": "^5.1.1",
+    "joi-to-swagger": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "node-schedule": "^2.1.0"
+    "node-schedule": "^2.1.0",
+    "yargs": "^17.1.1-candidate.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
     "@types/ioredis": "^4.28.8",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
+    "@types/yargs": "^17.0.10",
     "rimraf": "^3.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
