--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "ioredis": "^4.28.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "multiparty": "4.2.3",
+    "mime-types": "2.1.35",
     "node-schedule": "^2.1.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
-    "@types/express": "^4.17.13",
+    "@types/express": "4.17.17",
     "@types/ioredis": "^4.28.8",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
+    "@types/mime-types": "2.1.1",
+    "@types/multiparty": "0.0.33",
     "rimraf": "^3.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
