--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@alicloud/pop-core": "^1.7.10",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.8",
-    "ioredis": "^4.28.5",
+    "ioredis": "5.3.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "multiparty": "4.2.3",
@@ -35,13 +35,12 @@
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/express": "4.17.17",
-    "@types/ioredis": "^4.28.8",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
     "@types/mime-types": "2.1.1",
     "@types/multiparty": "0.0.33",
-    "rimraf": "^3.0.2",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "rimraf": "5.0.1",
+    "tslib": "2.6.0",
+    "typescript": "5.1.6"
   }
 }
